[package]
name = "gl_fun"
version = "0.1.0"
authors = ["Jordan Butler <blah@blah.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"

[dependencies.sdl2]
version = "0.34.2"
features = ["bundled","static-link"]

[dependencies.sdl2-sys]
version = "=0.34.2"

[dependencies.image]
version = "0.23.12"

[build-dependencies]
walkdir = "2.1"